--- a/resume.html
+++ b/resume.html
@@ -25,27 +25,40 @@
 <h2 id="work">work</h2>
 <ul>
 <li><p><strong>Contractor</strong></p>
-<p><em>Data Scientist</em></p>
-Developed a neural net constructor from the ground up in Elixir, with flexibility concerning training techniques, neural density, supervised learning, and unsupervised learning.
+<p><em>Data Scientist</em>, 2017</p>
+Developed a neural net constructor from the ground up in Elixir, to improve understanding of machine learning at its most basic level.
 <ul>
-<li>Elixir, Erlang, neural nets, learning algorithms.</li>
+<li>Elixir, for it's utility as a concurrent, fault-tolerant design.</li>
+<li>Allowed for modification of all nodes, hidden layers, and activation functions.</li>
+<li>Included a genotypic visualizer to map out the literal neurons and connections within the neural net.</li>
 </ul>
-Deployed various TensorFlow machine learning programs, ranging from style-transfer to binary-classification, regression, and multi-class classification, on Google Cloud Computing platform to evaluate performance across various hyperparameters. Explored optimal neural net configurations and validation techniques.
+Deployed various machine learning programs, ranging from style-transfer to binary-classification, regression, and multi-class classification, on Google Cloud Computing platform to evaluate performance across various hyperparameters. Explored optimal neural net configurations and validation techniques.
 <ul>
-<li>Python, Elixir, numpy, scipy, TensorFlow, Node.js.</li>
-<li>Machine Learning, Keras libraries, nVidia Cudda libraries, Google Cloud Computing, K-fold validation.</li>
+<li>Installation of TensorFlow with nVidia Cudda libraries to accelerate processing via GPU utilization.</li>
+<li>Configuration of TensorFlow environment for docker, virtual environment, native, and cloud-based use.</li>
+<li>Explored optimal neural net configurations and validation techniques, including K-fold validation, recurrent neural nets, and feed-forward neural nets.</li>
+<li>Python and associated machine learning libraries, including numpy, scipy, Keras, and MNIST.</li>
 </ul></li>
 <li><p><strong>University of Kansas</strong> (Lawrence, KS)</p>
+<p><em>Center for Research Methods and Data Analysis</em></p>
 <p><em>Program Evaluation Consultant</em>, 2010 - 2011</p>
-Reconstructed, tested, and validated the ARC Self-Determination Scale - a 72 item self-report metric for use in reporting self-determination among students with learning disabilities. Presented findings to authors and collaborators. New version, with shortened length and increased validity and reliability is included in the latest iteration of the National Longitudinal Transition Study (NLTS-2), administered by the Department of Education.
+Reconstructed the ARC Self-Determination Scale - a 72 item self-report metric for use in reporting self-determination among students with learning disabilities. Presented findings to authors and collaborators. New version, with shortened length and increased validity and reliability is included in the latest iteration of the National Longitudinal Transition Study (NLTS-2), administered by the Department of Education.
 <ul>
-<li>SAS, LISREL, MPLus, R, Matlab, SPSS.</li>
-<li>Structural equation modeling, power analysis, validity testing, missing data, bootstrapping.</li>
+<li>SAS and SPSS, tested internal reliability of scale using Cronbach's alpha.</li>
+<li>MPlus, used confirmatory factor analyses to determine construct validity of scale.</li>
+<li>Rebuilt scale including only the most reliable and theoretically valid items, following alpha testing and CFA's.</li>
+<li>R and MPlus, performed multiple imputation to implement planned missingness to extend usefulness of the scale.</li>
+<li>Power anlysis and validity testing on planned missing data.</li>
+<li>Adherance to HIPAA compliance protocols for sensitive and secure data.</li>
+<li>Presented findings to original author and collaborators, as well as to Program Evaluation Team and research symposium.</li>
 </ul>
-<p>Acted as liaison between Program Evaluation Team and clientele to explain technical results and communicate project goals.</p>
-Developed, deployed, and administered training grant evaluation surveys for use with various inter-departmental assessments. Presented findings to Program Evaluation Team, stakeholders, and research symposium.
+Collaboration with Program Evaluation Team to assess and evaluate various inter-departmental education grants for the purpose of grant submission, evaluation, and renewal.
 <ul>
+<li>Translated goals and priorities of education grant to identifiable, measurable outcomes.</li>
+<li>Acted as liaison between Program Evaluation Team and clientele to explain technical results and communicate project goals.</li>
+<li>Developed, deployed, and administered training grant evaluation surveys, using REDCap.</li>
 <li>Data entry, cleaning, and database manipulation.</li>
+<li>Protocol revisioning, client intake assessment, and ticket-writing.</li>
 <li>Powerpoint, version control, meeting notes, proofreading.</li>
 </ul></li>
 <li><p><strong>MH Properties</strong></p>
@@ -73,12 +86,17 @@ Developed, deployed, and administered training grant evaluation surveys for use 
 <li><p><strong>CalTech Signature Award</strong></p>
 <em>CalTech</em>, 2006
 <ul>
-<li>Innovative and Creative thinking in mathematics and sciences*</li>
+<li>Innovative and Creative thinking in mathematics and sciences.</li>
 </ul></li>
 <li><p><strong>National Merit Scholar</strong></p>
 <em>University of Kansas</em>, 2006 - 2011
 <ul>
-<li>Outstanding academic and extra-curricular achievement</li>
+<li>Outstanding academic and extra-curricular achievement.</li>
+</ul></li>
+<li><p><strong>Dean's List Scholar</strong></p>
+<em>University of Kansas</em>, 2006 - 2011
+<ul>
+<li>Outstanding academic and achievement.</li>
 </ul></li>
 </ul>
 </div>
