--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@ Collaboration with Program Evaluation Team to assess and evaluate various inter-
 <ul>
 <li>Translated goals and priorities of education grant to identifiable, measurable outcomes.</li>
 <li>Acted as liaison between Program Evaluation Team and clientele to explain technical results and communicate project goals.</li>
-<li>Developed, deployed, and administered training grant evaluation surveys, using REDCap.</li>
+<li>Developed, deployed, and administered training grant evaluation surveys, gathering outcome data concerning program success and student outcomes, using REDCap.</li>
 <li>Data entry, cleaning, and database manipulation.</li>
 <li>Protocol revisioning, client intake assessment, and ticket-writing.</li>
 <li>Powerpoint, version control, meeting notes, proofreading.</li>
