--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
 <p>michaelhorvath87@gmail.com, 845-309-4388</p>
 <h2 id="summary">Summary</h2>
 <ul>
-<li>Michael is a Kansas City native, with a fierce interest in artificial intelligence and human cognition. With a background in Psychology and Statistics from the University of Kansas, he is currently exploring machine learning from the ground up. While he may put you to sleep explaining how cool it is that machines can learn at all, you might find it more enjoyable to ask about his dog Bruno. Check out his latest work over at github.</li>
+<li>Michael is a Kansas City native, with a fierce interest in artificial intelligence and human cognition. With a background in Psychology and Statistics from the University of Kansas, he is currently exploring machine learning from the ground up. While he may put you to sleep explaining how cool it is that machines can learn at all, you might find it more enjoyable to ask about his dog Bruno. Check out his latest work over at github (https://github.com/kwisatzheadache).</li>
 </ul>
 <h2 id="work">work</h2>
 <ul>
@@ -70,14 +70,14 @@ Collaboration with Program Evaluation Team to assess and evaluate various inter-
 <h2 id="education">education</h2>
 <ul>
 <li><p><strong>University of Kansas</strong> (Lawrence, KS)</p>
-<em>BA in Pyschology and Quantitative Methods, with Honors</em>, 2006 - 2011
+<em>BA in Psychology and Quantitative Methods, with Honors</em>, 2006 - 2011
 <ul>
 <li>Courses in advanced statistics including multivariate power analysis, ANOVA, MANOVA, multiple imputation, linear regression, multiple regression.</li>
 </ul></li>
 <li><p><strong>University of Osnabrueck</strong> (Germany)</p>
 <em>Semester Abroad in Cognitive Science and AI</em>
 <ul>
-<li>Courses in philosohpy of the mind, human cognition, and human categorization behavior.</li>
+<li>Courses in philosophy of the mind, human cognition, and human categorization behavior.</li>
 <li>Converstaionally fluent in German.</li>
 </ul></li>
 </ul>
