--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
 <p>michaelhorvath87@gmail.com, 845-309-4388</p>
 <h2 id="summary">Summary</h2>
 <ul>
-<li>Michael is a Kansas City native, with a fierce interest in artificial intelligence and human cognition. With a background in Psychology and Statistics from the University of Kansas, he is currently exploring machine learning from the ground up. While he may put you to sleep explaining how cool it is that machines can learn at all, you might find it more enjoyable to ask about his dog Bruno. Check out his latest work over at github (https://github.com/kwisatzheadache).</li>
+<li>Born in Kansas but world-traveled and thirsty for knowledge, Michael now thrives in the quest to unravel the unknown mysteries that lay ahead with machine learning. His fierce intelligence and interest in human cognition provide an unending supply of drive and determination. Graduating summa cum laude from the University of Kansas, his Psychology and Statistics background provided him with a basic tool kit, but his current exploration and command of machine learning has ignited a torrent of passion within him, transforming his array of tools into a purposeful machine. Michael has immersed himself in this field. His latest work at github speaks for itself.</li>
 </ul>
 <h2 id="work">work</h2>
 <ul>
@@ -31,13 +31,20 @@ Developed a neural net constructor from the ground up in Elixir, to improve unde
 <li>Elixir, for it's utility as a concurrent, fault-tolerant design.</li>
 <li>Allowed for modification of all nodes, hidden layers, and activation functions.</li>
 <li>Included a genotypic visualizer to map out the literal neurons and connections within the neural net.</li>
+<li>Explored reinforcement learning methods to train neural net to solve Rubiks cube scape.</li>
 </ul>
 Deployed various machine learning programs, ranging from style-transfer to binary-classification, regression, and multi-class classification, on Google Cloud Computing platform to evaluate performance across various hyperparameters. Explored optimal neural net configurations and validation techniques.
 <ul>
-<li>Installation of TensorFlow with nVidia Cudda libraries to accelerate processing via GPU utilization.</li>
+<li>TensorFlow with nVidia Cudda libraries to accelerate processing via GPU utilization.</li>
 <li>Configuration of TensorFlow environment for docker, virtual environment, native, and cloud-based use.</li>
-<li>Explored optimal neural net configurations and validation techniques, including K-fold validation, recurrent neural nets, and feed-forward neural nets.</li>
-<li>Python and associated machine learning libraries, including numpy, scipy, Keras, and MNIST.</li>
+<li>Explored optimal neural net configurations and validation techniques, including K-fold validation, recurrent neural nets, and convolutional neural nets.</li>
+<li>Python and associated machine learning libraries, including numpy, scipy, Keras, pandas and MNIST.</li>
+</ul>
+Explored best methods for using Long Short-Term Memory networks to predict variables from time series data.
+<ul>
+<li>Predicted Bitcoin price index based on previous price indices.<br />
+</li>
+<li>Predicted blood sugar levels based on input from continuous glucous monitor readings.</li>
 </ul></li>
 <li><p><strong>University of Kansas</strong> (Lawrence, KS)</p>
 <p><em>Center for Research Methods and Data Analysis</em></p>
