--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
 <p>michaelhorvath87@gmail.com, 845-309-4388</p>
 <h2 id="summary">Summary</h2>
 <ul>
-<li>Born in Kansas but world-traveled and thirsty for knowledge, Michael now thrives in the quest to unravel the unknown mysteries that lay ahead with machine learning. His fierce intelligence and interest in human cognition provide an unending supply of drive and determination. Graduating summa cum laude from the University of Kansas, his Psychology and Statistics background provided him with a basic tool kit, but his current exploration and command of machine learning has ignited a torrent of passion within him, transforming his array of tools into a purposeful machine. Michael has immersed himself in this field. His latest work at github speaks for itself.</li>
+<li>Graduated summa cum laude from the University of Kansas with an interest in all things analytic.</li>
 </ul>
 <h2 id="work">work</h2>
 <ul>
